--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,8 @@
-Options -MultiViews
+# Enable rewrite engine
 RewriteEngine On
+RewriteBase /
+
+# Redirect all requests to index.html
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^ index.html [QSA,L]
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.*)$ /index.html [L]
